--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ rocket_okapi = { version = "0.9.0", features = ["preserve_order", "swagger"] }
 schemars = "1.0.1"
 serde = "1.0.219"
 sha2 = "0.10.9"
+tokio = "1.45.1"
 utoipa = "5.4.0"
 utoipa-axum = "0.2.0"
 utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
